# mousepilot

./: README.md  pyproject.toml  requirements.txt
src/mousepilot/: __init__.py  __main__.py  app.py
tests/: test_basic.py
