[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mousepilot"
version = "0.1.0"
description = "Mouse moving program"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Alex Glowacki"}
]

dependencies = []

[project.scripts]
mousepilot = "mousepilot.__main__:main"