[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mousepilot"
version = "0.1.0"
description = "Mouse moving program"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Alex Glowacki"}
]

dependencies = [
    "MouseInfo==0.1.3",
    "PyAutoGUI==0.9.54",
    "PyGetWindow==0.0.9",
    "PyMsgBox==2.0.1",
    "pyperclip==1.11.0",
    "PyRect==0.2.0",
    "PyScreeze==1.0.1",
    "pytweening==1.2.0]",
]

[project.scripts]
mousepilot = "mousepilot.__main__:main"